--- a/DataStructure/1935_postfix.ipynb
+++ b/DataStructure/1935_postfix.ipynb
@@ -18,6 +18,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ✰eval의 결과가 int형으로 나오므로 스택에 다시 넣어줄때 주의하자\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -27,8 +34,18 @@
     "n_num = int(sys.stdin.readline().strip())\n",
     "pf= sys.stdin.readline().strip()\n",
     "nums =[sys.stdin.readline().strip() for _ in range(n_num)]\n",
+    "op=['-','/','+','*']\n",
+    "n_l=[]\n",
+    "for i in range(len(pf)):\n",
+    "    if pf[i] in op:\n",
+    "        n2 =n_l.pop()\n",
+    "        n1 = n_l.pop()\n",
+    "        n_l.append(str(eval(n1+pf[i]+n2)))\n",
+    "    else:\n",
+    "        n_l.append(nums[ord(pf[i])-65])\n",
     "\n",
-    "\n"
+    "r=float(n_l.pop())\n",
+    "print(f'{r:.2f}')"
    ]
   },
   {
@@ -43,7 +60,7 @@
     "2\n",
     "3\n",
     "4\n",
-    "5"
+    "5\n"
    ]
   },
   {
@@ -57,8 +74,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
