--- a/DataStructure/1966_printerQ.ipynb
+++ b/DataStructure/1966_printerQ.ipynb
@@ -27,7 +27,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "import deque from collections\n"
+   ]
   }
  ],
  "metadata": {
