--- a/DataStructure/1966_printerQ.ipynb
+++ b/DataStructure/1966_printerQ.ipynb
@@ -29,7 +29,62 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "import deque from collections\n"
+    "from collections import deque\n",
+    "\n",
+    "n_i= int(sys.stdin.readline().strip())\n",
+    "n_m=[]\n",
+    "qs=[]\n",
+    "r=[]\n",
+    "for _ in range(n_i):\n",
+    "    n_m.append(list(map(int, sys.stdin.readline().strip().split())))\n",
+    "    qs.append(list(map(int,sys.stdin.readline().strip().split())))\n",
+    "    \n",
+    "def count_doc(nm,queue):\n",
+    "    list=deque()\n",
+    "    cnt=0\n",
+    "    for idx,w in enumerate(queue):\n",
+    "        list.append([idx,w])\n",
+    "    while True:\n",
+    "        if max(queue)==list[0][1]:\n",
+    "            if nm[1]==list[0][0]:\n",
+    "                cnt+=1\n",
+    "                return cnt\n",
+    "            queue.remove(list.popleft()[1])\n",
+    "            cnt+=1\n",
+    "        else:\n",
+    "            list.append(list.popleft())\n",
+    "    \n",
+    "for i in range(n_i):\n",
+    "    r.append(count_doc(n_m[i],qs[i]))\n",
+    "\n",
+    "for f in r:\n",
+    "    print(f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "3\n",
+    "1 0\n",
+    "5\n",
+    "4 2\n",
+    "1 2 3 4\n",
+    "6 0\n",
+    "1 1 9 1 1 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1\n",
+    "2\n",
+    "5"
    ]
   }
  ],
