--- a/DataStructure/1935_postfix.ipynb
+++ b/DataStructure/1935_postfix.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 문제\n",
+    "### 문제 postfix\n",
     "후위 표기식과 각 피연산자에 대응하는 값들이 주어져 있을 때, 그 식을 계산하는 프로그램을 작성하시오.\n",
     "\n",
     "### 입력\n",
