--- a/DataStructure/10799_ironsticks.ipynb
+++ b/DataStructure/10799_ironsticks.ipynb
@@ -36,25 +36,23 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "input=sys.stdin.readline().strip()\n",
+    "stack=list(sys.stdin.readline().strip())\n",
     "cnt=0\n",
-    "m_s=0 # 괄호 상태 전이 )였다면 1\n",
-    "m_c=0 # 더해줄 막대 갯수\n",
-    "for c in input:\n",
-    "    if c=='(':\n",
-    "        if m_s:\n",
-    "            m_c +=1            \n",
+    "m_c=0\n",
+    "while stack:\n",
+    "    curr = stack.pop()\n",
+    "    top =0 if not stack else stack[-1]\n",
+    "    if curr ==')':\n",
+    "        if top =='(':\n",
     "            cnt+=m_c\n",
-    "            m_s=0\n",
+    "            stack.pop()\n",
     "        else:\n",
-    "             m_c +=1\n",
+    "            m_c+=1\n",
     "    else:\n",
-    "        if m_s:\n",
-    "            m_c-=1\n",
-    "            m_s=1\n",
-    "        else:\n",
-    "            cnt+=m_c\n",
-    "            m_s=1"
+    "        cnt+=1\n",
+    "        m_c-=1\n",
+    "        \n",
+    "print(cnt)"
    ]
   },
   {
@@ -77,8 +75,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
