--- a/DataStructure/2493_top.ipynb
+++ b/DataStructure/2493_top.ipynb
@@ -26,16 +26,16 @@
    "source": [
     "import sys\n",
     "i_n =int(sys.stdin.readline().strip())\n",
-    "stack= dict(zip(list(sys.stdin.readline().strip().split(' ')),[i for i in range(1,i_n+1)]))\n",
+    "stack= list(sys.stdin.readline().strip().split(' '))\n",
+    "dic =dict(zip(stack,[i for i in range(1,i_n+1)]))\n",
     "\n",
     "wait=[]\n",
     "reverse_r=[]\n",
-    "while True:\n",
-    "    top = stack.pop()\n",
-    "    if top <= stack[-1] if stack else False: # stack의 크기가 1일때 고려필요\n",
-    "        reverse_r.append()\n",
-    "    else:\n",
-    "        wait.append(top)"
+    "while stack:\n",
+    "    if stack[-1]>stack[-2]:\n",
+    "        stack.pop()\n",
+    "        \n",
+    "    "
    ]
   },
   {
