--- a/DataStructure/2493_top.ipynb
+++ b/DataStructure/2493_top.ipynb
@@ -27,13 +27,17 @@
     "import sys\n",
     "i_n =int(sys.stdin.readline().strip())\n",
     "stack= list(sys.stdin.readline().strip().split(' '))\n",
-    "dic =dict(zip(stack,[i for i in range(1,i_n+1)]))\n",
+    "index =[i for i in range(1,i_n+1)]\n",
     "\n",
     "wait=[]\n",
+    "w_index=[]\n",
     "reverse_r=[]\n",
     "while stack:\n",
     "    if stack[-1]>stack[-2]:\n",
-    "        stack.pop()\n",
+    "        wait.append(stack.pop())\n",
+    "        w_index.append(index.pop())\n",
+    "    else:\n",
+    "        while\n",
     "        \n",
     "    "
    ]
