--- a/DataStructure/2493_top.ipynb
+++ b/DataStructure/2493_top.ipynb
@@ -24,22 +24,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code 1\n",
     "import sys\n",
     "i_n =int(sys.stdin.readline().strip())\n",
     "stack= list(sys.stdin.readline().strip().split(' '))\n",
-    "index =[i for i in range(1,i_n+1)]\n",
     "\n",
     "wait=[]\n",
-    "w_index=[]\n",
     "reverse_r=[]\n",
     "while stack:\n",
-    "    if stack[-1]>stack[-2]:\n",
+    "    if len(stack)==1:\n",
+    "        while len(reverse_r)!=len(stack):\n",
+    "            reverse_r.append(0)\n",
+    "        break\n",
+    "    elif stack[-1]>stack[-2]:\n",
     "        wait.append(stack.pop())\n",
-    "        w_index.append(index.pop())\n",
     "    else:\n",
-    "        while\n",
-    "        \n",
-    "    "
+    "        while wait:\n",
+    "            if stack[-1]>wait[-1]:\n",
+    "                reverse_r.append(len(stack))\n",
+    "                wait.pop()\n",
+    "            else:\n",
+    "                break\n",
+    "        reverse_r.append(len(stack))\n",
+    "        stack.pop()\n",
+    "\n",
+    "r= reverse_r[::-1]\n",
+    "print(' '.join(n for n in r))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code 2\n",
+    "import sys\n",
+    "i_n =int(sys.stdin.readline().strip())\n",
+    "stack= list(sys.stdin.readline().strip().split(' '))\n",
+    "\n",
+    "result = [0] * i_n \n",
+    "wait = []\n",
+    "\n",
+    "for i in range(i_n):\n",
+    "    while wait and stack[i] > stack[wait[-1]]:\n",
+    "        wait.pop()\n",
+    "    result[i] = wait[-1] + 1 if wait else 0\n",
+    "    wait.append(i)\n",
+    "\n",
+    "print(' '.join(map(str, result)))"
    ]
   },
   {
