--- a/DataStructure/2493_top.ipynb
+++ b/DataStructure/2493_top.ipynb
@@ -61,7 +61,7 @@
     "# code 2\n",
     "import sys\n",
     "i_n =int(sys.stdin.readline().strip())\n",
-    "stack= list(sys.stdin.readline().strip().split(' '))\n",
+    "stack= list(map(int,sys.stdin.readline().strip().split(' ')))\n",
     "\n",
     "result = [0] * i_n \n",
     "wait = []\n",
