--- a/DataStructure/22942_datacheck.ipynb
+++ b/DataStructure/22942_datacheck.ipynb
@@ -44,11 +44,11 @@
     "i_n = int(sys.stdin.readline().strip())\n",
     "cs = [list(map(int,sys.stdin.readline().strip().split(' ') )) for _ in range(i_n)]\n",
     "\n",
-    "base=[0 for _ in range(1000000)]\n",
+    "base=[0 for _ in range(1100000)]\n",
     "no=0\n",
     "for x,r in cs:\n",
     "    init = x-r if x-r>0 else 0\n",
-    "    fin = x+r+1\n",
+    "    fin = x+r+1 if x+r+1>0 else 0\n",
     "    if sum(base[init:fin]) == (2*r+1)*(base[x]):\n",
     "        base[init:fin]= [base[x]+1 for _ in range(len(base[init:fin]))]\n",
     "    else:\n",
