--- a/DataStructure/22942_datacheck.ipynb
+++ b/DataStructure/22942_datacheck.ipynb
@@ -47,8 +47,8 @@
     "case=[]\n",
     "no=0\n",
     "for x,r in cs:\n",
-    "    init = x-r if x-r>0 else 0\n",
-    "    fin = x+r if x+r>0 else 0\n",
+    "    init = x-r\n",
+    "    fin = x+r\n",
     "    if not no:\n",
     "        if case:\n",
     "            for b_i,b_f in case:\n",
