--- a/DataStructure2/7662_dbheap.ipynb
+++ b/DataStructure2/7662_dbheap.ipynb
@@ -25,7 +25,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "import heapq\n",
+    "\n",
+    "n_p = int(sys.stdin.readline().strip())\n",
+    "\n",
+    "\n",
+    "\n",
+    "for _ in range(n_p):\n",
+    "    n_i = int(sys.stdin.readline().strip())\n",
+    "    l=[]\n",
+    "    for __ in range(n_i):\n",
+    "        cmd,n = sys.stdin.readline().strip().split(' ')\n",
+    "        n = int(n)\n",
+    "        if cmd =='I':\n",
+    "            heapq.heappush(l,n)\n",
+    "        elif cmd == 'D':\n",
+    "            if l:\n",
+    "                if n == 1:\n",
+    "                    l.remove(max(l))\n",
+    "                else:\n",
+    "                    heapq.heappop(l)\n",
+    "    \n",
+    "    if l:\n",
+    "        print(f\"{max(l)} {min(l)}\")\n",
+    "    else:\n",
+    "        print('EMPTY')\n",
+    "            \n",
+    "                \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
