--- a/DataStructure2/7662_dbheap.ipynb
+++ b/DataStructure2/7662_dbheap.ipynb
@@ -35,21 +35,27 @@
     "\n",
     "for _ in range(n_p):\n",
     "    n_i = int(sys.stdin.readline().strip())\n",
-    "    l=[]\n",
+    "    h_max=[]\n",
+    "    h_min=[]\n",
+    "    l=0\n",
     "    for __ in range(n_i):\n",
     "        cmd,n = sys.stdin.readline().strip().split(' ')\n",
     "        n = int(n)\n",
     "        if cmd =='I':\n",
-    "            heapq.heappush(l,n)\n",
+    "            heapq.heappush(h_max,-n)\n",
+    "            heapq.heappush(h_min,n)\n",
+    "            l+=1\n",
     "        elif cmd == 'D':\n",
-    "            if l:\n",
+    "            if l>0:\n",
     "                if n == 1:\n",
-    "                    l.remove(max(l))\n",
+    "                    heapq.heappop(h_max)\n",
+    "                    l-=1\n",
     "                else:\n",
-    "                    heapq.heappop(l)\n",
+    "                    heapq.heappop(h_min)\n",
+    "                    l-=1\n",
     "    \n",
-    "    if l:\n",
-    "        print(f\"{max(l)} {min(l)}\")\n",
+    "    if l>0:\n",
+    "        print(f\"{-(heapq.heappop(h_max))} {heapq.heappop(h_min)}\")\n",
     "    else:\n",
     "        print('EMPTY')\n",
     "            \n",
