--- a/DataStructure2/7662_dbheap.ipynb
+++ b/DataStructure2/7662_dbheap.ipynb
@@ -28,6 +28,7 @@
    "source": [
     "import sys\n",
     "import heapq\n",
+    "from collections import defaultdict\n",
     "\n",
     "n_p = int(sys.stdin.readline().strip())\n",
     "\n",
@@ -37,6 +38,7 @@
     "    n_i = int(sys.stdin.readline().strip())\n",
     "    h_max=[]\n",
     "    h_min=[]\n",
+    "    dic=defaultdict(int)\n",
     "    l=0\n",
     "    for __ in range(n_i):\n",
     "        cmd,n = sys.stdin.readline().strip().split(' ')\n",
@@ -44,18 +46,30 @@
     "        if cmd =='I':\n",
     "            heapq.heappush(h_max,-n)\n",
     "            heapq.heappush(h_min,n)\n",
+    "            dic[n]+=1\n",
     "            l+=1\n",
     "        elif cmd == 'D':\n",
     "            if l>0:\n",
     "                if n == 1:\n",
-    "                    heapq.heappop(h_max)\n",
+    "                    pn=heapq.heappop(h_max)\n",
     "                    l-=1\n",
+    "                    if dic[-pn]!=0:\n",
+    "                        dic[-pn]-=1\n",
     "                else:\n",
-    "                    heapq.heappop(h_min)\n",
+    "                    pn=heapq.heappop(h_min)\n",
     "                    l-=1\n",
-    "    \n",
+    "                    if dic[pn]!=0:\n",
+    "                        dic[pn]-=1\n",
+    "    while True:\n",
+    "        max = - heapq.heappop(h_max)\n",
+    "        if dic[max]!=0:\n",
+    "            break\n",
+    "    while True:\n",
+    "        min = heapq.heappop(h_min)\n",
+    "        if dic[min]!=0:\n",
+    "            break\n",
     "    if l>0:\n",
-    "        print(f\"{-(heapq.heappop(h_max))} {heapq.heappop(h_min)}\")\n",
+    "        print(f\"{max} {min}\")\n",
     "    else:\n",
     "        print('EMPTY')\n",
     "            \n",
