--- a/DataStructure2/7662_dbheap.ipynb
+++ b/DataStructure2/7662_dbheap.ipynb
@@ -51,24 +51,31 @@
     "        elif cmd == 'D':\n",
     "            if l>0:\n",
     "                if n == 1:\n",
-    "                    pn=heapq.heappop(h_max)\n",
-    "                    l-=1\n",
-    "                    if dic[-pn]!=0:\n",
-    "                        dic[-pn]-=1\n",
+    "                    while True:\n",
+    "                        pn=heapq.heappop(h_max)\n",
+    "                        l-=1\n",
+    "                        if dic[-pn]!=0:\n",
+    "                            dic[-pn]-=1\n",
+    "                            break\n",
     "                else:\n",
-    "                    pn=heapq.heappop(h_min)\n",
-    "                    l-=1\n",
-    "                    if dic[pn]!=0:\n",
-    "                        dic[pn]-=1\n",
-    "    while True:\n",
-    "        max = - heapq.heappop(h_max)\n",
-    "        if dic[max]!=0:\n",
-    "            break\n",
-    "    while True:\n",
-    "        min = heapq.heappop(h_min)\n",
-    "        if dic[min]!=0:\n",
-    "            break\n",
+    "                    while True:\n",
+    "                        pn=heapq.heappop(h_min)\n",
+    "                        l-=1\n",
+    "                        if dic[pn]!=0:\n",
+    "                            dic[pn]-=1\n",
+    "                            break\n",
+    "        if n==6:\n",
+    "            print('test' + dic[n])\n",
+    "    \n",
     "    if l>0:\n",
+    "        while True:\n",
+    "            max = - heapq.heappop(h_max)\n",
+    "            if dic[max]!=0:\n",
+    "                break\n",
+    "        while True:\n",
+    "            min = heapq.heappop(h_min)\n",
+    "            if dic[min]!=0:\n",
+    "                break\n",
     "        print(f\"{max} {min}\")\n",
     "    else:\n",
     "        print('EMPTY')\n",
