--- a/DataStructure2/7662_dbheap.ipynb
+++ b/DataStructure2/7662_dbheap.ipynb
@@ -53,19 +53,17 @@
     "                if n == 1:\n",
     "                    while True:\n",
     "                        pn=heapq.heappop(h_max)\n",
-    "                        l-=1\n",
     "                        if dic[-pn]!=0:\n",
     "                            dic[-pn]-=1\n",
+    "                            l-=1\n",
     "                            break\n",
     "                else:\n",
     "                    while True:\n",
     "                        pn=heapq.heappop(h_min)\n",
-    "                        l-=1\n",
     "                        if dic[pn]!=0:\n",
     "                            dic[pn]-=1\n",
+    "                            l-=1\n",
     "                            break\n",
-    "        if n==6:\n",
-    "            print('test' + dic[n])\n",
     "    \n",
     "    if l>0:\n",
     "        while True:\n",
@@ -78,10 +76,7 @@
     "                break\n",
     "        print(f\"{max} {min}\")\n",
     "    else:\n",
-    "        print('EMPTY')\n",
-    "            \n",
-    "                \n",
-    "    "
+    "        print('EMPTY')"
    ]
   }
  ],
