--- a/DataStructure2/21939_recomP.ipynb
+++ b/DataStructure2/21939_recomP.ipynb
@@ -51,7 +51,17 @@
    "source": [
     "import sys\n",
     "import heapq\n",
-    "\n",
+    "class node:\n",
+    "    def __init__(self, p_num, L, right = None, left = None):\n",
+    "        self.right = right\n",
+    "        self.left = left\n",
+    "        self.p = p_num\n",
+    "        self.l = L\n",
+    "        \n",
+    "class bst:\n",
+    "    def __init__(self, p_num, L):\n",
+    "        self.head = node(p_num,L)\n",
+    "    \n",
     "n=int(sys.stdin.readline().strip())\n",
     "probs = [list(map(int, sys.stdin.readline().strip().split(' '))) for _ in range(n)]\n",
     "\n",
@@ -60,7 +70,7 @@
     "for p,l in probs:\n",
     "    dic[p]=l\n",
     "    \n",
-    "    \n",
+    "\n",
     "\n",
     "for _ in range(n_cmds):\n",
     "    cmd = sys.stdin.readline().strip().split(' ')"
